[gd_scene load_steps=15 format=3 uid="uid://gi2poehk3spu"]

[ext_resource type="Script" path="res://script/player.gd" id="1_ydnby"]
[ext_resource type="Texture2D" uid="uid://d2f4cele1xqso" path="res://assets/character/pixil-layer-Background (2).png" id="3_1gw3b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0t5i"]
size = Vector2(14, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_3xuff"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fa3g8"]
atlas = ExtResource("3_1gw3b")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1pau"]
atlas = ExtResource("3_1gw3b")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cikq"]
atlas = ExtResource("3_1gw3b")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ydgi"]
atlas = ExtResource("3_1gw3b")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhoec"]
atlas = ExtResource("3_1gw3b")
region = Rect2(0, 16, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_500xq"]
atlas = ExtResource("3_1gw3b")
region = Rect2(20, 16, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghfwp"]
atlas = ExtResource("3_1gw3b")
region = Rect2(40, 16, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah1ir"]
atlas = ExtResource("3_1gw3b")
region = Rect2(60, 16, 20, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_m38is"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa3g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1pau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cikq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ydgi")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhoec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_500xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghfwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah1ir")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_le74r"]
radius = 28.0179

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("anim")]
y_sort_enabled = true
script = ExtResource("1_ydnby")
anim = NodePath("AnimatedSprite2D")

[node name="HurtBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_h0t5i")

[node name="Attack" type="Area2D" parent="."]
visible = false

[node name="HitBox" type="CollisionShape2D" parent="Attack"]
shape = SubResource("CircleShape2D_3xuff")

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_m38is")
animation = &"Idle"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Interaction_Component" type="Node2D" parent="."]

[node name="InteractionArea" type="Area2D" parent="Interaction_Component"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_Component/InteractionArea"]
shape = SubResource("CircleShape2D_le74r")

[node name="InteractionLabel" type="Label" parent="Interaction_Component"]
offset_left = -20.0
offset_top = -61.0
offset_right = 20.0
offset_bottom = -35.0
size_flags_horizontal = 4
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Interaction_Component/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction_Component/InteractionArea" to="." method="_on_interaction_area_area_exited"]
